--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,25 @@
 !/log/.keep
 /tmp
 /public/cdn
+*.DS_Store
+*.rbc
+.rspec
+/public/system
+/coverage/
+
+config/secrets.yml
+
+## Environment normalisation:
+/.bundle
+/vendor/bundle
+
+# these should all be checked in to normalise the environment:
+# Gemfile.lock, .ruby-version, .ruby-gemset
+
+# if using bower-rails ignore default bower_components path bower.json files
+/vendor/assets/bower_components
+*.bowerrc
+bower.json
+
+# Ignore pow environment settings
+.powenv
