removed facebook password

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,3 +1,3 @@
 FACEBOOK:
-    APP_SECRET: 2cd905ed3ae679b0bc90c5d97d3f4eba
-    APP_ID: 862319193790767
+    APP_SECRET: ENV['RYDE_FACEBOOK_APP_SECRET']
+    APP_ID: ENV['RYDE_FACEBOOK_APP_API_ID']
